@@ -1,3 +1,15 @@
+2001-01-27  John Harper  <jsh@eazel.com>
+
+	* themes/Crux/theme.jl,
+	themes/Crux/inactive:menu-button-pressed.png,
+	themes/Crux/inactive:menu-button-hilight.png,
+	themes/Crux/inactive:button-pressed.png,
+	themes/Crux/inactive:button-hilight.png: buttons on inactive
+	frames now prelight like active frames
+
+	* po/pl.po: updated Polish translation from Daniel Koc
+	<kocio@bigfoot.com>
+
 2001-01-25  John Harper  <jsh@eazel.com>
 
 	* themes/Crux/theme.jl: s/MacOS/Mac OS/
